--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,7 +1,7 @@
 name: WorldInventories
 main: me.drayshak.WorldInventories.WorldInventories
-version: 1.0.1
-author: drayshak
+version: 1.0.1a
+author: drayshak, dog.big, sylphio
 description: Automatic inventory switching for groups of worlds
 commands:
   wireload:
