--- a/pom.xml
+++ b/pom.xml
@@ -29,21 +29,15 @@
     <repositories>
         <repository>
             <id>bukkit-repo</id>
-            <url>http://repo.bukkit.org/artifactory/repo</url>
+            <url>http://repo.bukkit.org/content/groups/public</url>
         </repository>      
     </repositories> 
     
     <dependencies>
         <dependency>
             <groupId>org.bukkit</groupId>
-            <artifactId>craftbukkit</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.1-R5-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
     </dependencies>    
