--- a/src/config.yml
+++ b/src/config.yml
@@ -11,6 +11,13 @@
 #   creative_overworld to survival_end
 #   survival_nether to creative_nether
 
+# If "donotifications" is set to false you won't get inventory switching notifications in the console
+# Set "domiimport" to true to make WorldInventories attempt to import MultiInv data
+#  Automatically sets itself to false when an attempt is made
+# Set "dostats" to true to make hearts, food level, experience and such track with inventory
+# If a save interval is specified, set "outputtimertoconsole" to false to stop it from outputting to the console
+# Set "saveinterval" to anything above 30 to make inventories/stats save automatically every x seconds
+
 groups:
     creativegroup:
     - creative_overworld
@@ -20,18 +27,8 @@ groups:
     - survival_nether
     - survival_end
 
-# If this is set to false you won't get inventory switching notifications in the console
 donotifications: true
-
-# Set this to true to make WorldInventories attempt to import MultiInv data
-#  Automatically sets itself to false when an attempt is made
 domiimport: false
-
-# Set to true to make hearts, food level, experience and such track with inventory
 dostats: false
-
-# If a save interval is specified below, set this to false to stop it from outputting to the console
 outputtimertoconsole: true
-
-# Set to anything above 30 to make inventories/stats save automatically every x seconds
 saveinterval: 0
