--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
     <!-- License -->
     <licenses>
         <license>
-            <name>GNU LESSER GENERAL PUBLIC LICENSE Version 3</name>
-            <url>http://www.gnu.org/licenses/lgpl.html</url>
+            <name>BSD 2-Clause License</name>
+            <url>http://opensource.org/licenses/BSD-2-Clause</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
