--- a/src/config.yml
+++ b/src/config.yml
@@ -18,7 +18,8 @@
 # If a save interval is specified, set "outputtimertoconsole" to false to stop it from outputting to the console
 # Set "saveinterval" to anything above 30 to make inventories/stats save automatically every x seconds
 # Set "loadinvonlogin" to true to make the plugin load the player's inventory on login no matter where they spawn
-
+# Set "do78import" to true to attempt a conversion of the pre build 78 files for use in newer versions
+#  Automatically resets itself to false on an attempt
 groups:
     creativegroup:
     - creative_overworld
@@ -34,3 +35,4 @@ dostats: false
 outputtimertoconsole: true
 saveinterval: 0
 loadinvonlogin: true
+do78import: false
