--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,12 @@
             <version>1.3.1-R2.0</version>
             <type>jar</type>
         </dependency>
-    </dependencies>    
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.3</version>
+        </dependency>
+    </dependencies>        
     
     <build>
         <defaultGoal>clean package</defaultGoal>
@@ -83,7 +88,30 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.3.2</version>
-            </plugin>         
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <filters>
+                                <filter>
+                                    <artifact>com.thoughtworks.xstream</artifact>
+                                    <includes>
+                                    <include>**</include>
+                                    </includes>
+                                </filter>
+                            </filters>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>            
         </plugins>
     </build>    
 </project>
