--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,18 @@
             <artifactId>xstream</artifactId>
             <version>1.4.3</version>
         </dependency>
+        <dependency>
+            <artifactId>xmlpull</artifactId>
+            <groupId>xmlpull</groupId>
+            <type>jar</type>
+            <version>1.1.3.1</version>
+        </dependency>
+        <dependency>
+            <artifactId>xpp3_min</artifactId>
+            <groupId>xpp3</groupId>
+            <type>jar</type>
+            <version>1.1.4c</version>
+        </dependency>
     </dependencies>        
     
     <build>
@@ -92,7 +104,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>1.6</version>
+                <version>1.7.1</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -100,13 +112,32 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <minimizeJar>true</minimizeJar>
                             <filters>
+                                <filter>
+                                    <artifact>org.bukkit:bukkit</artifact>
+                                    <excludes>
+                                        <exclude>**</exclude>
+                                    </excludes>
+                                </filter>
                                 <filter>
                                     <artifact>com.thoughtworks.xstream</artifact>
                                     <includes>
-                                    <include>**</include>
-                                    </includes>
+                                        <include>com/thoughtworks/xstream/**</include>
+                                    </includes>                                    
                                 </filter>
+                                <filter>
+                                    <artifact>xmlpull</artifact>
+                                    <includes>
+                                        <include>**</include>
+                                    </includes>                                    
+                                </filter>
+                                <filter>
+                                    <artifact>xpp3</artifact>
+                                    <includes>
+                                        <include>**</include>
+                                    </includes>                                    
+                                </filter>          
                             </filters>
                         </configuration>
                     </execution>
