--- a/src/config.yml
+++ b/src/config.yml
@@ -11,6 +11,9 @@
 #   creative_overworld to survival_end
 #   survival_nether to creative_nether
 
+# Add a player to the "exempt" collection to make this plugin ignore them completely
+#  No saves, loads or anything else done by this plugin will apply to them until you remove them from the list
+
 # If "donotifications" is set to false you won't get inventory switching notifications in the console
 # Set "domiimport" to true to make WorldInventories attempt to import MultiInv data
 #  Automatically sets itself to false when an attempt is made
@@ -34,6 +37,10 @@ groups:
     - survival_overworld
     - survival_nether
     - survival_end
+    
+exempt:
+  - exampleplayer
+  - exampleplayer2
 
 donotifications: true
 domiimport: false
