--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,13 @@
             <groupId>uk.co.tggl.pluckerpluck.multiinv</groupId>
             <artifactId>MultiInv</artifactId>
             <version>3.1.3</version>
-        </dependency>        
+        </dependency>
+        <dependency>
+            <groupId>org.bukkit</groupId>
+            <artifactId>craftbukkit</artifactId>
+            <version>1.3.1-R2.0</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>        
     
     <build>
@@ -129,6 +135,12 @@
                                         <exclude>**</exclude>
                                     </excludes>
                                 </filter>
+                                <filter>
+                                    <artifact>org.bukkit:craftbukkit</artifact>
+                                    <excludes>
+                                        <exclude>**</exclude>
+                                    </excludes>
+                                </filter>                                
                                 <filter>
                                     <artifact>com.thoughtworks.xstream</artifact>
                                     <includes>
