--- a/src/config.yml
+++ b/src/config.yml
@@ -30,7 +30,8 @@
 # When this plugin loads it will automatically try to convert pre version 1.4.1 files and add "auto141updated: true" to this file if successful
 # Set "dovanillaimport" to true to attempt an import of the items and stats stored in players player.dat file
 #  Set "vanillatogroup" to the group you want to import to. If blank it will use the default group.
-
+# Set "dogamemodeswitch" to true and add groups to gamemodes as per the example to enforce gamemodes
+#  SURVIVAL, CREATIVE or HARDCORE at the time of writing (follows Bukkit's names)
 groups:
     creativegroup:
     - creative_overworld
@@ -40,10 +41,16 @@ groups:
     - survival_nether
     - survival_end
     
+gamemodes:
+  default: SURVIVAL
+  creativegroup: CREATIVE
+  survivalgroup: SURVIVAL    
+    
 exempt:
   - exampleplayer
   - exampleplayer2
 
+dogamemodeswitch: false
 donotifications: true
 domiimport: false
 miimportmode: 0
