Bukkit 1.3.2-R1.0, Ender Chest importing

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: WorldInventories
 main: me.drayshak.WorldInventories.WorldInventories
-version: 1.5.6
+version: 1.5.7-beta
 author: drayshak
 description: Automatic inventory switching for groups of worlds
 commands:
