--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <!-- Continuous integration -->
     <ciManagement>
         <system>jenkins</system>
-        <url>http://ci.crafte.rs</url>
+        <url>http://ci.drayshak.co.uk</url>
     </ciManagement>    
     
     <!-- Repository locations -->
@@ -32,8 +32,8 @@
             <url>http://repo.bukkit.org/content/groups/public</url>
         </repository>
         <repository>
-            <id>crafters-drayshak</id>
-            <url>http://drayshak.co.uk/maven_repo</url>
+            <id>drayshak-maven</id>
+            <url>http://maven.drayshak.co.uk</url>
         </repository>
     </repositories> 
     
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.3.1-R2.0</version>
+            <version>1.3.2-R1.0</version>
             <type>jar</type>
         </dependency>
         <dependency>
@@ -164,7 +164,7 @@
                                     <includes>
                                         <include>**</include>
                                     </includes>                                    
-                                </filter>          
+                                </filter>
                             </filters>
                         </configuration>
                     </execution>
