--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
             <type>jar</type>
         </dependency>
         <dependency>
+            <groupId>org.bukkit</groupId>
+            <artifactId>craftbukkit</artifactId>
+            <version>1.4.5-R0.3-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>        
+        <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
             <version>1.4.3</version>
@@ -65,12 +71,6 @@
             <groupId>uk.co.tggl.pluckerpluck.multiinv</groupId>
             <artifactId>MultiInv</artifactId>
             <version>3.1.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>craftbukkit</artifactId>
-            <version>1.3.1-R2.0</version>
-            <type>jar</type>
         </dependency>
     </dependencies>        
     
