--- a/pom.xml
+++ b/pom.xml
@@ -41,13 +41,13 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.4.5-R0.3-SNAPSHOT</version>
+            <version>1.4.5-R1.0</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
-            <version>1.4.5-R0.3-SNAPSHOT</version>
+            <version>1.4.5-R1.0</version>
             <type>jar</type>
         </dependency>        
         <dependency>
