--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: WorldInventories
 main: me.drayshak.WorldInventories.WorldInventories
-version: 1.5.9-dev
+version: 1.5.9-beta
 author: drayshak
 description: Automatic inventory switching for groups of worlds
 commands:
