New version, new save format. Use Bukkit wherever possible, YML serialisation and all. Works really well, less hacky, should be stable for the future.

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: WorldInventories
 main: me.drayshak.WorldInventories.WorldInventories
-version: 1.5.9-beta
+version: 1.6.0-dev
 author: drayshak
 description: Automatic inventory switching for groups of worlds
 commands:
