Remove Craftbukkit dependency, fully implement new save format, no importer yet.

--- a/pom.xml
+++ b/pom.xml
@@ -41,15 +41,9 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.4.5-R1.0</version>
+            <version>1.4.6-R0.1-SNAPSHOT</version>
             <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>craftbukkit</artifactId>
-            <version>1.4.5-R1.0</version>
-            <type>jar</type>
-        </dependency>        
+        </dependency>   
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
