Build against 1.5-R0.1-SNAPSHOT, set dostats to true by default.

--- a/src/config.yml
+++ b/src/config.yml
@@ -55,7 +55,7 @@ dogamemodeswitch: false
 donotifications: true
 domiimport: false
 miimportmode: 0
-dostats: false
+dostats: true
 outputtimertoconsole: true
 saveinterval: 0
 loadinvonlogin: true
