--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
                 <includes>
                     <include>plugin.yml</include>
                     <include>config.yml</include>
+                    <include>lang.yml</include>
                 </includes>
             </resource>
         </resources>
