--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,13 @@
-<project>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>me.drayshak</groupId>
-    <artifactId>WorldInventories</artifactId>
-    <name>WorldInventories</name>
-    <url>http://dev.bukkit.org/server-mods/world-inventories</url>
-    <version>dev-SNAPSHOT</version>
+    <groupId>de.craftinc</groupId>
+    <artifactId>CraftIncInventories</artifactId>
+    <name>Craft Inc. Inventories</name>
+    <url>http://dev.bukkit.org/bukkit-plugins/craftinc-inventories</url>
+    <packaging>jar</packaging>
+    <version>1.0-DEV</version>
   
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -60,90 +63,46 @@
     </dependencies>        
     
     <build>
-        <defaultGoal>clean package</defaultGoal>
-        <sourceDirectory>${basedir}/src</sourceDirectory>
-        <!-- Resources -->
+        <finalName>${project.name} ${project.version}</finalName>
+        <sourceDirectory>src</sourceDirectory>
         <resources>
             <resource>
-                <targetPath>.</targetPath>
+                <directory>resources</directory>
                 <filtering>true</filtering>
-                <directory>${basedir}</directory>
-                <includes>
-                    <include>LICENSE.txt</include>
-                </includes>
-            </resource>
-            <resource>
-                <targetPath>.</targetPath>
-                <filtering>true</filtering>
-                <directory>${basedir}/src</directory>
-                <includes>
-                    <include>plugin.yml</include>
-                    <include>config.yml</include>
-                    <include>lang.yml</include>
-                </includes>
             </resource>
         </resources>
-        
-        <!-- Plugins -->
         <plugins>
-            <!-- Compile plugin -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-            <!-- JAR creation plugin -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.3.2</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>1.7.1</version>
+                <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
                         <phase>package</phase>
                         <goals>
-                            <goal>shade</goal>
+                            <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
-                            <minimizeJar>true</minimizeJar>
-                            <relocations>
-                                    <relocation>
-                                            <pattern>org.mcstats</pattern>
-                                            <shadedPattern>me.drayshak.WorldInventories.org.mcstats</shadedPattern>
-                                    </relocation>
-                            </relocations>                           
-                            <filters>
-                                <filter>
-                                    <artifact>org.bukkit:bukkit</artifact>
-                                    <excludes>
-                                        <exclude>**</exclude>
-                                    </excludes>
-                                </filter>
-                                <filter>
-                                    <artifact>org.bukkit:craftbukkit</artifact>
-                                    <excludes>
-                                        <exclude>**</exclude>
-                                    </excludes>
-                                </filter>
-                                <filter>
-                                    <artifact>uk.co.tggl.pluckerpluck.multiinv:MultiInv</artifact>
-                                    <excludes>
-                                        <exclude>**</exclude>
-                                    </excludes>
-                                </filter>
-                            </filters>
+                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>            
+            </plugin>
+            <plugin>
+                <artifactId>exec-maven-plugin</artifactId>
+                <groupId>org.codehaus.mojo</groupId>
+                <version>1.2.1</version>
+                <executions>
+                    <execution>
+                        <id>Run Test Bukkit Server</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>${basedir}/scripts/test-deployment.sh</executable>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
-    </build>    
+    </build>   
 </project>
