--- a/resources/config.yml
+++ b/resources/config.yml
@@ -35,7 +35,7 @@
 # When this plugin loads it will automatically try to convert pre build 78 files and add "auto78updated: true" to this file if successful
 # When this plugin loads it will automatically try to convert pre version 1.4.1 files and add "auto141updated: true" to this file if successful
 # Set "dovanillaimport" to true to attempt an import of the items and stats stored in players player.dat file
-#  Set "vanillatogroup" to the group you want to import to. If blank it will use the default group.
+# Set "vanillatogroup" to the group you want to import to. If blank it will use the default group.
 # Set "dogamemodeswitch" to true and add groups to gamemodes as per the example to enforce gamemodes
 #  SURVIVAL, CREATIVE or HARDCORE at the time of writing (follows Bukkit's names)
 
@@ -51,8 +51,9 @@ saveinterval: 0
 loadinvonlogin: true
 dovanillaimport: false
 language: en_GB
+
 message-hidden:
-  died-message: false
-  changed-message: false
-  nochange-message: false
-  loaded-message: false 
+  died-message: true
+  changed-message: true
+  nochange-message: true
+  loaded-message: true
