Added missing import group key to the ConfigurationKeys class and the default config file.

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -50,6 +50,7 @@ outputtimertoconsole: true
 saveinterval: 0
 loadinvonlogin: true
 dovanillaimport: false
+vanillatogroup: default
 language: en_GB
 
 message-hidden:
